# cubesat-analytical-detector-sim

./: .gitignore  AttenuationData.py  DetectorStack.py  FlareSpectrum.py  HafxSimulationContainer.py  HafxStack.py  Instrument.py  Material.py  PhotonDetector.py  README.md  Sipm3000.py  calc_counts_range.py  calc_counts_twixt_8100kev.py  clean_format_xcom.py  common.py  common_OLD.py  delta_example.py  estimate_pileup_rate.py  example-detector-sim.ipynb  find_attenuator_thicknesses.py  impress.py  impress_constants.py  impress_v2.py  play-with-area.py  plot_a_spectrum.py  post_process_v2.py  pres_example.py  pyproject.toml  rerun_sim.py  sim_with_optimized.py  single_detector_sim.py  sswidl_bridge.py  why-does-area-change.py
attenuation-data-files/: Al.tab  Be.tab  CeBr3.tab  Teflon.tab  cleaner.py  second_clean.py
cebr3-scripts/: average_eff_area.py  calc_counts_range.py  compute_counts_flare_raw_inc.py  estimate_pileup_rate.py  find_attenuator_thicknesses.py  luxel-thicks.pickle  pull_consts.py  save_flares_for_david.py  sim_with_optimized_plot_areas_responses.py  try_battaglia_different_classes.py  vary_thicknesses_for_luxel.py
exact/: do-we-need-x123.py
examples/: air-example.ipynb  example-detector-sim.ipynb  plot_atmospheric_thickness.ipynb  pymsis_example.ipynb
grips-piggyback/: grips_stack.py  sim_grips_basic.py
idl-python-bridge/: f_vth_bridge.pro  sswidl_bridge.py
just-pull-spectra/: save_fvth_sunxspex_compare.py  save_spectra_txt.py  save_unatt_analytical.py
messy-tests/: diagnose-area.py  test-f_vth_bridge.py  test-gaussian-edisp.py  (+1 more)
(+104 files in other folders)
