[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["adetsim"]

[project]
version = "0"
name = "adetsim"
dependencies = [
    "asdf",
    "asdf_astropy",
    "astropy",
    "matplotlib",
    "numpy",
    "requests",
    "scipy",
]
